<resources>
    <string name="app_name">My ApplicationDip</string>
    <string name="enter_gender">Выберите пол</string>
    <string name="man">Мужской</string>
    <string name="girl">Женский</string>
    <string name="further">Далее</string>
    <string name="enter_weight">Введите вес</string>
    <string name="enter_height">Введите рост</string>
    <string name="enter_age">Введите возраст</string>

    <string name="gender">Пол</string>
    <string name="weight">Вес</string>
    <string name="height">Рост</string>
    <string name="age">Возраст</string>
    <string name="lifestyle">Ваш образ жизни</string>

    <string name="enter_lifestyle">Какой ваш образ жизни?</string>
    <string name="blank_fiend">Заполните поле корректно</string>
    <string name="active">Активный(Легкие нагрузки)</string>
    <string name="actives">Активный</string>
    <string name="very_active">Очень активный(Ежедневные нагрузки)</string>
    <string name="very_actives">Очень активный</string>
    <string name="not_active">Минимальные нагрузки (сидячая работа)</string>
    <string name="nots_active">Мало активен</string>
    <string name="metabolism">Величина основного обмена веществ :</string>
    <string name="calorie_calculation">Рассчитать кол-во калорий для поддержания веса</string>
    <string name="refil">Заполнить заново</string>
    <string name="calories_bzu">Калории и БЖУ</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="back">Назад</string>
    <string name="out_five">из 5</string>
    <string name="calculation_Mufflin_form">Расчет был выполнен по формуле Маффлина Сан-Жеора</string>

    <string name="calorie_norm">Норма калорий</string>
    <string name="number_meals">Давайте определимся, как часто вам удобно кушать?</string>
    <string name="numbers_meals">Количество приемов пищи (от 2 до 4)</string>
    <string name="meal_interval">Интервал приемов пищи (от 4 до 7 часов)</string>

    <string name="home">Главная</string>
    <string name="profile">Профиль</string>
    <string name="statist">Статистика</string>

    <string name="lala">Слишком большой интервал</string>
    <string name="dada">Слишком много приемов пищи</string>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>