<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_fone"
    tools:context=".FoodConsumptionSchedule" >

    <TextView
        android:id="@+id/tvNumberMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/number_meals"
        android:textColor="@color/text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edNumberMeals"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberMeals" />

    <EditText
        android:id="@+id/edMealInterval"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="@+id/edNumberMeals"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edNumberMeals"
        app:layout_constraintTop_toBottomOf="@+id/tvMealInterval" />

    <Button
        android:id="@+id/Further"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="104dp"
        android:text="@string/further"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edMealInterval"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edMealInterval" />

    <TextView
        android:id="@+id/tvMealInterval"
        android:layout_width="205dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/meal_interval"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edNumberMeals"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/edNumberMeals"
        app:layout_constraintTop_toBottomOf="@+id/edNumberMeals" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="205dp"
        android:layout_height="44dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/numbers_meals"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edNumberMeals"
        app:layout_constraintEnd_toEndOf="@+id/edNumberMeals"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/edNumberMeals" />
</androidx.constraintlayout.widget.ConstraintLayout>