<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaloriesBzhu">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:text="кКал"
        android:textColor="@color/material_dynamic_neutral50"
        app:layout_constraintBottom_toBottomOf="@+id/textMainCalculations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toEndOf="@+id/textMainCalculations"
        app:layout_constraintTop_toTopOf="@+id/textMainCalculations"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="284dp"
        android:layout_height="50dp"

        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#888992"
        android:onClick="onClickSave"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="14dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="г"
        android:textColor="@color/material_dynamic_neutral50"
        app:layout_constraintBottom_toBottomOf="@+id/gramsCarboh"
        app:layout_constraintStart_toEndOf="@+id/gramsCarboh"
        app:layout_constraintTop_toTopOf="@+id/gramsCarboh" />

    <TextView
        android:id="@+id/textProteine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="45dp"
        android:rotationX="4"
        android:text="@string/proteins"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/fats"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textMainCalculations"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/textMainCalculations"
        app:layout_constraintTop_toBottomOf="@+id/textMainCalculations" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="@string/carbohydrates"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/calculation_Mufflin_form"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <TextView
        android:id="@+id/percentagesProt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textProteine"
        app:layout_constraintStart_toStartOf="@+id/textProteine"
        app:layout_constraintTop_toBottomOf="@+id/textProteine" />

    <TextView
        android:id="@+id/percentagesFast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/percentagesCorboh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/gramsProt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/percentagesProt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/percentagesProt"
        app:layout_constraintTop_toBottomOf="@+id/percentagesProt" />

    <TextView
        android:id="@+id/gramsFats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/percentagesFast"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/percentagesFast"
        app:layout_constraintTop_toBottomOf="@+id/percentagesFast" />

    <TextView
        android:id="@+id/gramsCarboh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/percentagesCorboh"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/percentagesCorboh"
        app:layout_constraintTop_toBottomOf="@+id/percentagesCorboh" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="12dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:text="%"
        android:textColor="@color/material_dynamic_neutral50"
        app:layout_constraintBottom_toBottomOf="@+id/percentagesCorboh"
        app:layout_constraintStart_toEndOf="@+id/percentagesCorboh"
        app:layout_constraintTop_toTopOf="@+id/percentagesCorboh" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/calories_bzu"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="284dp"
        android:layout_height="50dp"

        android:layout_marginBottom="40dp"
        android:backgroundTint="#888992"
        android:onClick="onClickBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textMainCalculations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>