<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_fone"
    tools:context=".FirstUser">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="365dp"
        android:layout_height="135dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_gender"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/bt_further"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:onClick="onClickFurther"
        android:text="@string/further"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_info"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/text_info"
        app:layout_constraintStart_toStartOf="@+id/text_info"
        app:layout_constraintTop_toBottomOf="@+id/text_info" />

    <TextView
        android:id="@+id/textIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        tools:layout_editor_absoluteX="23dp">

        <LinearLayout
            android:id="@+id/LayBtHoise1"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:backgroundTint="@color/blue"
            android:gravity="center_vertical"
            android:onClick="onClickCh1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumber1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_varians"
                android:gravity="center"
                android:text="1"
                android:textColor="#888992"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvChOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/man"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayBtHoise2"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:backgroundTint="@color/blue"
            android:gravity="center_vertical"
            android:onClick="onClickCh2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumber2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_varians"
                android:gravity="center"
                android:text="2"
                android:textColor="#888992"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvChTwoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/girl"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayBtHoise3"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:backgroundTint="@color/blue"
            android:gravity="center_vertical"
            android:onClick="onClickCh3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNumber3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_varians"
                android:gravity="center"
                android:text="3"
                android:textColor="#888992"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvChThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>